{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 99,
  "lineage": "a9d4f8d6-44da-6f30-8dc8-10e715796a6d",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ent_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:loadbalancer/app/ent-default-alb/a567cc0efeed977a",
            "arn_suffix": "app/ent-default-alb/a567cc0efeed977a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ent-default-alb-947610383.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:loadbalancer/app/ent-default-alb/a567cc0efeed977a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ent-default-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d877736be7d1c58d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08743fbbfee35aa2a"
              },
              {
                "subnet_id": "subnet-0e05af5dddb23e027"
              }
            ],
            "subnets": [
              "subnet-08743fbbfee35aa2a",
              "subnet-0e05af5dddb23e027"
            ],
            "tags": {
              "Environment": "default",
              "Name": "ent-default-alb"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-alb"
            },
            "vpc_id": "vpc-03031d6f30307669d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.networking.aws_security_group.ent_alb_sg",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ent_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:listener/app/ent-default-alb/a567cc0efeed977a/cff8b3cbb76186a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:targetgroup/ent-default-tg/9876de5bfe83bb8b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:listener/app/ent-default-alb/a567cc0efeed977a/cff8b3cbb76186a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:loadbalancer/app/ent-default-alb/a567cc0efeed977a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.ent_alb",
            "module.compute.aws_lb_target_group.ent_tg",
            "module.networking.aws_security_group.ent_alb_sg",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ent_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:targetgroup/ent-default-tg/9876de5bfe83bb8b",
            "arn_suffix": "targetgroup/ent-default-tg/9876de5bfe83bb8b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:816069135289:targetgroup/ent-default-tg/9876de5bfe83bb8b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ent-default-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "default",
              "Name": "ent-default-tg"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ent_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f30c37d3ecc94e7",
            "arn": "arn:aws:ec2:ap-south-1:816069135289:elastic-ip/eipalloc-04f30c37d3ecc94e7",
            "domain": "vpc",
            "id": "eipalloc-04f30c37d3ecc94e7",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-227-213.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.227.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-nat-eip"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_vpc.ent_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ent_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:internet-gateway/igw-0360d6fbd78592dd3",
            "id": "igw-0360d6fbd78592dd3",
            "owner_id": "816069135289",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-internet-gateway"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-internet-gateway"
            },
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ent_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f30c37d3ecc94e7",
            "association_id": "eipassoc-0e7c589ff1710869b",
            "connectivity_type": "public",
            "id": "nat-0e8b7930e34551a10",
            "network_interface_id": "eni-0270fb7ceea008a08",
            "private_ip": "10.0.1.12",
            "public_ip": "3.6.227.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e05af5dddb23e027",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-nat-gateway"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-nat-gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.ent_nat_eip",
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ent_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:route-table/rtb-0287adb8183528731",
            "id": "rtb-0287adb8183528731",
            "owner_id": "816069135289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e8b7930e34551a10",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "Name": "ent-default-private-route-table"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.ent_nat_eip",
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_nat_gateway.ent_nat_gateway",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ent_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:route-table/rtb-0bed1cee23f108a8c",
            "id": "rtb-0bed1cee23f108a8c",
            "owner_id": "816069135289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0360d6fbd78592dd3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "Name": "ent-default-public-route-table"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_vpc.ent_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ent_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0929f77fab272e426",
            "route_table_id": "rtb-0287adb8183528731",
            "subnet_id": "subnet-000d5131b6ed637a3"
          },
          "dependencies": [
            "module.networking.aws_eip.ent_nat_eip",
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_nat_gateway.ent_nat_gateway",
            "module.networking.aws_route_table.ent_private_route_table",
            "module.networking.aws_subnet.ent_private_subnet",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aa500626fb5d1b7",
            "route_table_id": "rtb-0287adb8183528731",
            "subnet_id": "subnet-01b7ca7c5946c6033"
          },
          "dependencies": [
            "module.networking.aws_eip.ent_nat_eip",
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_nat_gateway.ent_nat_gateway",
            "module.networking.aws_route_table.ent_private_route_table",
            "module.networking.aws_subnet.ent_private_subnet",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ent_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a2b9456a552d286",
            "route_table_id": "rtb-0bed1cee23f108a8c",
            "subnet_id": "subnet-0e05af5dddb23e027"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_route_table.ent_public_route_table",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1b554fa5488e17",
            "route_table_id": "rtb-0bed1cee23f108a8c",
            "subnet_id": "subnet-08743fbbfee35aa2a"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ent_gateway",
            "module.networking.aws_route_table.ent_public_route_table",
            "module.networking.aws_subnet.ent_public_subnet",
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ent_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:security-group/sg-0d877736be7d1c58d",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d877736be7d1c58d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ent-default-alb-sg",
            "name_prefix": "",
            "owner_id": "816069135289",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ent_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:security-group/sg-0783ca43f9b9aa43a",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0783ca43f9b9aa43a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ent-default-ec2-sg",
            "name_prefix": "",
            "owner_id": "816069135289",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ent_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:security-group/sg-06de8ae3fc0ea210b",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-06de8ae3fc0ea210b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access from EC2 security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0783ca43f9b9aa43a"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow http from public ec2 host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0783ca43f9b9aa43a"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow ssh access from public ec2 host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0783ca43f9b9aa43a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ent-default-rds-sg",
            "name_prefix": "",
            "owner_id": "816069135289",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.ent_ec2_sg",
            "module.networking.aws_vpc.ent_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ent_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-000d5131b6ed637a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d5131b6ed637a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-private-subnet-0",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-private-subnet-0",
              "Type": "Private"
            },
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-01b7ca7c5946c6033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b7ca7c5946c6033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ent_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-0e05af5dddb23e027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e05af5dddb23e027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-public-subnet-0",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-public-subnet-0",
              "Type": "Public"
            },
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:subnet/subnet-08743fbbfee35aa2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08743fbbfee35aa2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069135289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-03031d6f30307669d"
          },
          "dependencies": [
            "module.networking.aws_vpc.ent_vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ent_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069135289:vpc/vpc-03031d6f30307669d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c46a47bf37d3f259",
            "default_route_table_id": "rtb-0449915239b1f8ae9",
            "default_security_group_id": "sg-0cdc5b91e984dcbfc",
            "dhcp_options_id": "dopt-0cfa9a70821804df8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03031d6f30307669d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0449915239b1f8ae9",
            "owner_id": "816069135289",
            "tags": {
              "Environment": "default",
              "Name": "ent-default-vpc"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "ent-default-vpc"
            }
          }
        }
      ]
    }
  ]
}